--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.13",
     "axios": "^0.21.1",
     "firebase": "^8.10.0",
     "react": "^17.0.2",
@@ -19,6 +20,7 @@
     "redux": "^4.1.1",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "start": "^5.1.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
