시간표 추가
1. NavBar에서 시간표 보기 추가
2. course 수정 페이지에서 시간표 등록 추가

--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "antd": "^4.16.13",
     "axios": "^0.21.1",
     "firebase": "^8.10.0",
+    "npm": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table-drag-select": "^0.3.1",
     "redux": "^4.1.1",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
