Dowload modules associated with Eslint & Prettier

--- a/package.json
+++ b/package.json
@@ -49,6 +49,21 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.4.1"
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/preset-react": "^7.16.7",
+    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "lint-staged": "^12.1.7",
+    "prettier": "^2.4.1"
   }
 }
