--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-table-drag-select": "^0.3.1",
     "redux": "^4.1.1",
     "redux-promise": "^0.6.0",
@@ -49,8 +49,6 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.4.1",
-    "react-error-overlay": "^6.0.9",
     "@babel/eslint-parser": "^7.16.5",
     "@babel/preset-react": "^7.16.7",
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
@@ -65,6 +63,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "lint-staged": "^12.1.7"
+    "lint-staged": "^12.1.7",
+    "prettier": "2.4.1",
+    "react-error-overlay": "^6.0.9"
   }
 }
