--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.3",
+    "@react-spring/web": "^9.4.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -65,7 +66,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "lint-staged": "^12.1.7",
     "prettier": "^2.4.1",
-    "webpack": "^4.4.0",
-    "react-error-overlay": "^6.0.9"
+    "react-error-overlay": "^6.0.9",
+    "webpack": "^4.4.0"
   }
 }
