--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "npm": "^8.3.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
