--- a/package.json
+++ b/package.json
@@ -66,8 +66,9 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "lint-staged": "^12.1.7",
+    "mini-css-extract-plugin": "2.4.5",
     "prettier": "^2.4.1",
     "react-error-overlay": "^6.0.9",
-    "webpack": "^4.4.0"
+    "webpack": "^4.46.0"
   }
 }
