hooks 폴더 절대경로에 추가 & prettier import 순서 설정에도 추가

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -19,6 +19,7 @@
       "@components/*": ["./src/components/*"],
       "@pages/*": ["./src/pages/*"],
       "@hoc/*": ["./src/hoc/*"],
+      "@hooks/*": ["./src/hooks/*"],
       "@redux/*": ["./src/redux/*"],
       "@actions/*": ["./src/redux/actions/*"],
       "@reducer/*": ["./src/redux/reducer/*"],
