--- a/jsconfig.paths.json
+++ b/jsconfig.paths.json
@@ -3,7 +3,9 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["./src/components/*"],
+      "@components": ["./src/components"],
       "@pages/*": ["./src/pages/*"],
+      "@pages": ["./src/pages"],
       "@hoc/*": ["./src/hoc/*"],
       "@hooks/*": ["./src/hooks/*"],
       "@redux/*": ["./src/redux/*"],
@@ -11,6 +13,7 @@
       "@reducer/*": ["./src/redux/reducer/*"],
       "@font/*": ["./src/font/*"],
       "@utility/*": ["./src/utility/*"],
+      "@utility": ["./src/utility"],
       "@/*": ["./src/*"]
     }
   }
