--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "craco-alias": "^3.0.1",
+    "craco-antd": "^1.19.0",
+    "craco-less": "^2.0.0",
+    "css-loader": "^6.7.1",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
