--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
-  "extends": "./jsconfig.paths.json",
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "esModuleInterop": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "strict": true,
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
+    "typeRoots": ["node_modules/@types", "./types"],
     "baseUrl": ".",
-    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -15,6 +15,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "incremental": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
     "paths": {
       "@components/*": ["./src/components/*"],
       "@components": ["./src/components"],
@@ -31,6 +33,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "craco.config.js"],
+  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
   "exclude": ["node_modules"]
 }
