--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "axios": "^0.21.1",
     "file-saver": "^2.0.5",
     "firebase": "^8.10.0",
-    "npm": "^8.3.0",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-horizontal-scrolling-menu": "^2.7.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
     "react-responsive": "^9.0.0-beta.6",
+    "react-router": "^6.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
     "react-table-drag-select": "^0.3.1",
@@ -56,8 +56,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.18.9",
     "@babel/eslint-parser": "^7.16.5",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
+    "@types/react": "^18.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "babel-plugin-module-resolver": "^4.1.0",
     "craco-alias": "^3.0.1",
     "craco-antd": "^1.19.0",
@@ -75,6 +82,7 @@
     "mini-css-extract-plugin": "2.4.5",
     "prettier": "^2.4.1",
     "react-error-overlay": "^6.0.9",
-    "webpack": "^4.46.0"
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0"
   }
 }
