--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "file-saver": "^2.0.5",
     "firebase": "^8.10.0",
     "prop-types": "^15.8.1",
