--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-horizontal-scrolling-menu": "^2.7.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
