--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
@@ -78,7 +84,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "lint-staged": "^12.1.7",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "2.4.5",
     "prettier": "^2.4.1",
     "react-error-overlay": "^6.0.9",
