--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,4 @@
 {
-  "**/*.{ts,tsx}": ["prettier --write", "eslint --fix"],
-  "**/*.{js,jsx,json,css,md,scss,sass,less,yml,yaml,html,svg}": [
-    "prettier --write",
-    "eslint --fix"
-  ]
+  "**/*.{js,jsx,ts,tsx}": ["prettier --write", "eslint --fix"],
+  "**/*.{json,css,md,scss,sass,less,yml,yaml,html}": ["prettier --write"]
 }
