--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/react": "^18.0.15",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "babel-plugin-module-resolver": "^4.1.0",
