--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-horizontal-scrolling-menu": "^2.7.0",
     "react-icons": "^4.3.1",
+    "react-query": "^3.39.2",
     "react-redux": "^7.2.5",
     "react-responsive": "^9.0.0-beta.6",
     "react-router": "^6.3.0",
