--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
+    "@types/node": "^18.7.23",
     "@types/react": "^18.0.15",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
