Add: constants 폴더 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@components/*": ["./src/components/*"],
       "@components": ["./src/components"],
+      "@constants": ["./src/constants"],
       "@pages/*": ["./src/pages/*"],
       "@pages": ["./src/pages"],
       "@hoc/*": ["./src/hoc/*"],
