--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
     "react-table-drag-select": "^0.3.1",
+    "recoil": "^0.7.5",
     "redux": "^4.1.1",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
