--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.15",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "babel-plugin-module-resolver": "^4.1.0",
