--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,8 @@
       "@pages": ["./src/pages"],
       "@hoc/*": ["./src/hoc/*"],
       "@hooks/*": ["./src/hooks/*"],
+      "@recoilState/*": ["./src/recoilState/*"],
+      "@recoilState": ["./src/recoilState"],
       "@redux/*": ["./src/redux/*"],
       "@actions/*": ["./src/redux/actions/*"],
       "@reducer/*": ["./src/redux/reducer/*"],
@@ -34,6 +36,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
+    "src/types/custom.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
